Fix responsive and card height. Still a spacing issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,126 +26,70 @@ p {
   margin: 2rem 0 7rem;
 }
 
-/* .container {
-  width: 90vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 45rem auto;
-  padding: 0 6rem;
-} */
-.my-group {
+.all-cards {
   padding: 10%;
 }
 
 .firstBox {
   background-color: hsl(31, 77%, 52%);
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
+  border-radius: 1rem 0 0 1rem;
   padding: 4rem;
-  text-align: left;
 }
 
 .secondBox {
   background-color: hsl(184, 100%, 22%);
   padding: 4rem;
-  text-align: left;
+  border-radius: 0;
 }
 
 .thirdBox {
   background-color: hsl(179, 100%, 13%);
-  border-radius: 1rem;
+  border-radius: 0 1rem 1rem 0;
   padding: 4rem;
-  text-align: left;
+}
+
+.my-footer {
+  padding: 0;
+  background-color: inherit;
+  border-top: 0;
 }
 
 /******************* BUTTONS *******************/
-.btn-sedans {
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
+.my-buttons {
   border-radius: 40px;
-  height: 0;
-  line-height: 0;
+  font-family: 'Lexend Deca', sans-serif;
+  font-size: 1.2rem;
+  padding: 10px 25px;
+}
+
+.sedans-button {
   color: hsl(31, 77%, 52%);
-  font-family: 'Lexend Deca', sans-serif;
-  width: 100px;
-  font-size: 93.75%;
-  font-weight: 100;
-  padding: 18px;
-  background-color: hsl(0, 0%, 95%);
-  text-decoration: none;
-  display: inline-block;
-  cursor: pointer;
-  text-align: center;
 }
 
-.btn-sedans:hover {
+.sedans-button:hover {
   background: hsl(33, 77%, 95%);
-  border: solid #337FED 0;
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
-  border-radius: 40px;
-  text-decoration: none;
+  color: hsl(31, 77%, 52%);
 }
 
-.btn-suvs {
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
-  border-radius: 40px;
-  height: 0;
-  line-height: 0;
+.suvs-button {
   color: hsl(184, 100%, 22%);
-  font-family: 'Lexend Deca', sans-serif;
-  width: 100px;
-  font-size: 93.75%;
-  font-weight: 100;
-  padding: 18px;
-  background-color: hsl(0, 0%, 95%);
-  text-decoration: none;
-  display: inline-block;
-  cursor: pointer;
-  text-align: center;
 }
 
-.btn-suvs:hover {
+.suvs-button:hover {
   background: hsl(185, 100%, 95%);
-  border: solid #337FED 0;
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
-  border-radius: 40px;
-  text-decoration: none;
+  color: hsl(184, 100%, 22%);
 }
 
-.btn-luxury {
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
-  border-radius: 40px;
-  height: 0;
-  line-height: 0;
+.luxury-button {
   color: hsl(179, 100%, 13%);
-  font-family: 'Lexend Deca', sans-serif;
-  width: 100px;
-  font-size: 93.75%;
-  font-weight: 100;
-  padding: 18px;
-  background-color: hsl(0, 0%, 95%);
-  text-decoration: none;
-  display: inline-block;
-  cursor: pointer;
-  text-align: center;
 }
 
-.btn-luxury:hover {
+.luxury-button:hover {
   background: hsl(180, 100%, 95%);
-  border: solid #337FED 0;
-  -webkit-border-radius: 40px;
-  -moz-border-radius: 40px;
-  border-radius: 40px;
-  text-decoration: none;
+  color: hsl(179, 100%, 13%);
 }
 
+/* Footer */
 .attribution {
   font-size: 11px;
   text-align: center;
@@ -156,9 +100,13 @@ p {
   color: hsl(228, 45%, 44%);
 }
 
-@media (max-width 800px) {
+/* Media Queries */
+@media (max-width: 980px) {
   .firstBox {
-    border-top-right-radius: 1rem;
-    border-bottom-left-radius: 0;
+    border-radius: 1rem 1rem 0 0;
+  }
+
+  .thirdBox {
+    border-radius: 0 0 1rem 1rem;
   }
 }
